# equity-research-agent

./: .gitignore  README.md  pyproject.toml
stock_analysis_agent/: agent.py  callbacks.py  config.py  prompt.py  prompt_testing.py  tools.py
stock_analysis_agent/sub_agents/fund_agent/: agent.py  prompt.py
stock_analysis_agent/sub_agents/fundamental_agent/: agent.py  prompt.py  tools.py
stock_analysis_agent/sub_agents/policy_agent/: agent.py  prompt.py
stock_analysis_agent/sub_agents/technical_agent/: agent.py  prompt.py  tools.py
